--- a/payment.html
+++ b/payment.html
@@ -26,32 +26,22 @@
 
                 <h3>Select Payment Method</h3>
                 <div class="payment-methods">
-                    <div class="payment-method" onclick="selectPaymentMethod('flutterwave')">
+                    <div class="payment-method selected" onclick="selectPaymentMethod('flutterwave')">
                         <div style="font-size: 2em; color: #F5A623;">₦</div>
-                        <h4>Online Payment</h4>
+                        <h4>Online Payment 1</h4>
                         <p>Card/Transfer/USSD</p>
-                    </div>
-                    <div class="payment-method" onclick="selectPaymentMethod('transfer')">
-                        <div style="font-size: 2em; color: #27ae60;">₦</div>
-                        <h4>Manual Transfer</h4>
-                        <p>Bank Transfer</p>
                     </div>
                 </div>
 
                 <div id="paymentDetails">
-                    <!-- Payment details will appear here -->
+                    <div style="margin: 20px 0;">
+                        <h3>Online Payment 2</h3>
+                        <p>You will be redirected to a secure payment page to complete your transaction.</p>
+                        <p><strong>Accepted Methods:</strong> Card, Bank Transfer, USSD, Mobile Money</p>
+                    </div>
                 </div>
 
-                <div id="transferInstructions" style="display: none; background: #f8f9fa; padding: 20px; border-radius: 5px; margin: 20px 0;">
-                    <h3>Bank Transfer Details</h3>
-                    <p><strong>Bank Name:</strong> Zenith Bank</p>
-                    <p><strong>Account Name:</strong> GENIUS POINT ACADEMY</p>
-                    <p><strong>Account Number:</strong> 1234567890</p>
-                    <p><strong>Amount to Transfer:</strong> <span id="transferAmount">₦0</span></p>
-                    <p><strong>Important:</strong> After transferring, send proof of payment to 08012345678 via WhatsApp with your name and GPA Code.</p>
-                </div>
-
-                <button id="payButton" class="btn-primary" onclick="processPayment()" disabled>Complete Payment</button>
+                <button id="payButton" class="btn-primary" onclick="processPayment()">Complete Payment</button>
                 <button class="btn-secondary" onclick="window.history.back()" style="width: 100%; margin-top: 10px; padding: 10px; background: #95a5a6; color: white; border: none; border-radius: 5px; cursor: pointer;">Go Back</button>
             </div>
         </main>
