--- a/payment.html
+++ b/payment.html
@@ -38,6 +38,11 @@
                         <h3>Online Payment 2</h3>
                         <p>You will be redirected to a secure payment page to complete your transaction.</p>
                         <p><strong>Accepted Methods:</strong> Card, Bank Transfer, USSD, Mobile Money</p>
+                        <div class="accepted-cards">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Visa_Inc._logo.svg" alt="Visa">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Mastercard-logo.svg" alt="Mastercard">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/40/Verve_%28card%29.png" alt="Verve">
+</div>
                     </div>
                 </div>
 
@@ -49,3 +54,4 @@
     <script src="payment.js"></script>
 </body>
 </html>
+
